Fix: vistas de superadmin

--- a/app/src/main/res/layout/activity_super_admin_gestion_usuarios.xml
+++ b/app/src/main/res/layout/activity_super_admin_gestion_usuarios.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@color/bg_color"
     tools:context=".activity.superadmin.SuperAdminGestionUsuariosActivity">
 
 
@@ -48,12 +48,6 @@
                 android:textColor="#000000"
                 android:textSize="18sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="See All >"
-                android:textColor="#FF5722"
-                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -92,7 +86,6 @@
         </LinearLayout>
 
 
-        <!-- Bottom Navigation -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvUsers"
             android:layout_width="match_parent"
@@ -101,47 +94,36 @@
             android:layout_weight="1"
             tools:listitem="@layout/item_user" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:background="@drawable/rounded_background"
-            android:orientation="horizontal"
-            android:padding="16dp"
-            app:layout_constraintBottom_toBottomOf="parent">
 
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="31dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_dashboard" />
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="31dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_list" />
-
-            <ImageButton
-                android:layout_width="47dp"
-                android:layout_height="31dp"
-                android:layout_weight="wrap_content"
-                android:background="@drawable/ic_add"
-                android:text="Agregar"
-                android:textColor="#FF5722" />
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="31dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_notifications" />
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="31dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_profile" />
-        </LinearLayout>
 
     </LinearLayout>
 
+    <!-- Bottom Navigation -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_background"
+        android:orientation="horizontal"
+        android:padding="16dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="28dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_notifications" />
+
+
+        <ImageView
+            android:layout_width="47dp"
+            android:layout_height="46dp"
+            android:background="@drawable/ic_add" />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="31dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_profile" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
